[package]
name = "dns_online"
version = "0.1.1"
authors = ["Simon THOBY <simonthoby@live.fr>"]
edition = "2018"
repository = "https://github.com/nightmared/dns_online"
description = "A simple wrapper for the online.net DNS API"
license = "MPL-2.0"

[dependencies]
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"

[dependencies.curl]
version = "0.4.19"
features = ["static-curl", "static-ssl"]
